feat(footer): ajout des div .btns-container et .logos-container, stylisation du footer, mise à jour des couleurs
- Ajout des classes  et  dans le footer
- Ajout de la classe  et d’id  pour les images du footer
- Stylisation du footer dans le fichier CSS
- Modification de la couleur bleue dans la section

--- a/index.html
+++ b/index.html
@@ -41,16 +41,21 @@
     <section class="footer_container">
       <section class="core-technologies">
         <h3>Core technologies</h3>
-        <a href="#">Tokens</a>
-        <a href="#">Proof of coverage</a>
-        <a href="#">LongFi</a>
+        <div class="btns-container">
+          <a href="#" class="btn">Tokens</a>
+          <a href="#" class="btn">Proof of coverage</a>
+          <a href="#" class="btn">LongFi</a>
+        </div>
       </section>
 
       <section class="our-investors">
         <h3>Our investors</h3>
-        <a href="#"><img src="/assets/img/gv-logo.png" alt="GV Logo"></a>
-        <a href="#"><img src="/assets/img/firstmark-logo.png" alt="Firstmark Logo"></a>
-        <a href="#"><img src="/assets/img/khosla-ventures-logo.png" alt="Khosla Ventures Logo"></a>
+        <div class="logos-container">
+          <a href="#"><img src="/assets/img/gv-logo.png" id="gv-logo" alt="GV Logo"></a>
+          <a href="#"><img src="/assets/img/firstmark-logo.png" id="firstmark-logo" alt="Firstmark Logo"></a>
+          <a href="#"><img src="/assets/img/khosla-ventures-logo.png" id="khosla-ventures-logo"
+              alt="Khosla Ventures Logo"></a>
+        </div>
       </section>
     </section>
   </footer>
