- Ajout d'une balise <link> pour lier les fichiers index.html et responsive.css - Ajout de la classe  dans les liens de navigation - Ajout des paragraphes dans le footer pour le Copyright de la version mobile et desktop

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/styles/style.css">
+  <link rel="stylesheet" href="assets/styles/responsive.css">
   <title>Helium</title>
 </head>
 
@@ -15,9 +16,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#">5G</a></li>
-        <li><a href="#">Explorer</a></li>
-        <li><a href="#">Ecosystem</a></li>
+        <li><a href="#" class="nav-link">5G</a></li>
+        <li><a href="#" class="nav-link">Explorer</a></li>
+        <li><a href="#" class="nav-link">Ecosystem</a></li>
       </ul>
     </nav>
   </header>
@@ -57,7 +58,17 @@
               alt="Khosla Ventures Logo"></a>
         </div>
       </section>
+
+      <p class="mobile-copyright">
+        Challenge by <a href="https://fromscratch.podia.com/" target="_blank" rel="noopener noreferrer">From
+          Scratch</a>. Coded by <a href="https://github.com/valdesombilingo">@valdesombilingo</a>
+      </p>
     </section>
+
+    <p class="desktop-copyright">
+      Challenge by <a href="https://fromscratch.podia.com/" target="_blank" rel="noopener noreferrer">From
+        Scratch</a>. Coded by <a href="https://github.com/valdesombilingo">@valdesombilingo</a>
+    </p>
   </footer>
 </body>
 
