Ajout des attributs target et rel dans les liens des Copyright des classes .desktop-copyright et .mobile-copyright

--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
 
       <p class="mobile-copyright">
         Challenge by <a href="https://fromscratch.podia.com/" target="_blank" rel="noopener noreferrer">From
-          Scratch</a>. Coded by <a href="https://github.com/valdesombilingo">@valdesombilingo</a>
+          Scratch</a>. Coded by <a href="https://github.com/valdesombilingo" target="_blank"
+          rel="noopener noreferrer">@valdesombilingo</a>
       </p>
     </section>
 
     <p class="desktop-copyright">
       Challenge by <a href="https://fromscratch.podia.com/" target="_blank" rel="noopener noreferrer">From
-        Scratch</a>. Coded by <a href="https://github.com/valdesombilingo">@valdesombilingo</a>
+        Scratch</a>. Coded by <a href="https://github.com/valdesombilingo" target="_blank"
+        rel="noopener noreferrer">@valdesombilingo</a>
     </p>
   </footer>
 </body>
