suppression des / dans les chemins des liens et img

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/styles/style.css">
+  <link rel="stylesheet" href="assets/styles/style.css">
   <link rel="stylesheet" href="assets/styles/responsive.css">
   <title>Helium</title>
 </head>
@@ -34,7 +34,7 @@
         </p>
       </div>
 
-      <img src="/assets/img/main.png" alt="3D render of Helium miners from NEBRA and BOBCAT">
+      <img src="assets/img/main.png" alt="3D render of Helium miners from NEBRA and BOBCAT">
     </section>
   </main>
 
@@ -52,9 +52,9 @@
       <section class="our-investors">
         <h3>Our investors</h3>
         <div class="logos-container">
-          <a href="#"><img src="/assets/img/gv-logo.png" id="gv-logo" alt="GV Logo"></a>
-          <a href="#"><img src="/assets/img/firstmark-logo.png" id="firstmark-logo" alt="Firstmark Logo"></a>
-          <a href="#"><img src="/assets/img/khosla-ventures-logo.png" id="khosla-ventures-logo"
+          <a href="#"><img src="assets/img/gv-logo.png" id="gv-logo" alt="GV Logo"></a>
+          <a href="#"><img src="assets/img/firstmark-logo.png" id="firstmark-logo" alt="Firstmark Logo"></a>
+          <a href="#"><img src="assets/img/khosla-ventures-logo.png" id="khosla-ventures-logo"
               alt="Khosla Ventures Logo"></a>
         </div>
       </section>
