--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <section class="hero">
       <div class="hero-text">
-        <h1>People-<br />Powered<br />Networks</h1>
+        <h1>People-<br>Powered<br>Networks</h1>
         <h2>Start a Wireless Revolution</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse a ut
